// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home When there is a current session renders the home page with books 1`] = `
Array [
  <div
    className="nav-bg"
  >
    <div
      className="nav-bar container"
    >
      <div
        className="nav-group-logo"
      >
        <a
          aria-current="page"
          className="nav-link nav-title active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Bookkers
        </a>
      </div>
      <div
        className="nav-group"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/session-profile"
          onClick={[Function]}
        >
          Profile
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/books/new"
          onClick={[Function]}
        >
          Add book
        </a>
        <button
          className="nav-button"
          onClick={[Function]}
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="head-container"
    >
      <div
        className="logo-container"
      >
        <img
          alt="LOGO"
          className="logo"
          src="logo.png"
        />
      </div>
      <div
        className="welcome-container"
      >
        <h2>
          Welcome 
          testFirstName
           to Bookers
        </h2>
        <p>
          Bookkers es una red social que permite a sus usuarios publicar, calificar, recomendar y ver las recomendaciones que otros usuarios han hecho respecto a los libros ingresados a la aplicación.
        </p>
      </div>
    </div>
    <div
      className="container"
    >
      <h2>
        Books
      </h2>
      <div
        className="books-collection"
      />
      <div
        className="page-set"
      >
        <button
          className="page-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <p
          className="pages"
        >
          1 : 1
        </p>
        <button
          className="page-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Next
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Home When there is no current session renders the home page without books 1`] = `
Array [
  <div
    className="nav-bg"
  >
    <div
      className="nav-bar container"
    >
      <div
        className="nav-group-logo"
      >
        <a
          aria-current="page"
          className="nav-link nav-title active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Bookkers
        </a>
      </div>
      <div
        className="nav-group"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/login"
          onClick={[Function]}
        >
          Log In
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/sign-up"
          onClick={[Function]}
        >
          Sign Up 
        </a>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="head-container"
    >
      <div
        className="logo-container"
      >
        <img
          alt="LOGO"
          className="logo"
          src="logo.png"
        />
      </div>
      <div
        className="welcome-container"
      >
        <h2>
          Welcome to Bookers
        </h2>
        <p>
          Bookkers es una red social que permite a sus usuarios publicar, calificar, recomendar y ver las recomendaciones que otros usuarios han hecho respecto a los libros ingresados a la aplicación.
        </p>
      </div>
    </div>
  </div>,
]
`;
